fix body on mobiles

--- a/assets/style/1-base/_base-default.scss
+++ b/assets/style/1-base/_base-default.scss
@@ -25,13 +25,17 @@ html {
 body {
   min-width: 100vw;
   max-width: 100vw;
-  overflow: hidden;
   font-size: 1rem;
+  
+  @media (hover: hover) {
+    overflow: hidden;
+  }
 }
 
 h1, h2, h3, h4, h6 {
   margin: 0;
 }
+
 
 
 a {
